# LLM-token-optimizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
.codex/: config.toml
.codex/rules/: default.rules
.cursor/: rules
.github/copilot/: instructions.md
.windsurf/: rules
examples/: demo.py
tests/: test_api.py  test_compress.py  test_core.py
tokenopt/: __init__.py  _runtime.py  api.py  cli.py  compress.py  core.py
